--- a/firma.html
+++ b/firma.html
@@ -9,6 +9,8 @@
 	</style>
 </head>
 <body>
-	<div class="uno"></div>
+	<div class="uno">
+		<img src="imagenes/logo_uanl.gif" alt="logo Uni" >
+	</div>
 </body>
 </html>
