--- a/firma.html
+++ b/firma.html
@@ -5,40 +5,16 @@
 	<title>Firma Desarrollo</title>
 	<style type="text/css">
 	
-	* {
-		box-sizing: border-box;
-		padding: 0;
-		margin:0;
-	}
-	.uno{
-		height: 200px;
-		width: 480px;
-		overflow: hidden;
-		border: 1px solid black;
-	}
-	.logouni{
-		margin-left: 29px;
-		margin-top:62px;
-		float: left;
-	}
-	.info{
-		width: 277px;
-		float: left;
-		margin-top: 25px;
-		margin-left: 15px;
-		border-left:2px solid black;
-		padding-left: 7px;
-		font-size: 12px;
-		font-family: "Myriad Pro";
-		overflow: hidden;
-		color: #626262;
-	}
+/*	* {
+		box-sizing: border-box;padding: 0;margin:0;
+	}*/
+
 	</style>
 </head>
-<body>
-	<div class="uno">
-		<img class="logouni" src="imagenes/logo_uanl.gif" alt="logo Uni" >
-		<div class="info">
+<body style="box-sizing: border-box;padding: 0;margin:0;">
+	<div style="width: 480px;overflow: hidden;border: 1px solid black;box-sizing: border-box;padding: 0;margin:0;">
+		<img style="margin-left: 29px;margin-top:62px;float: left;" src="imagenes/logo_uanl.gif" alt="logo Uni" >
+		<div style="width: 277px;float: left;margin-top: 25px;margin-left: 15px;border-left:2px solid black;padding-left: 7px;font-size: 12px;font-family: 'Myriad Pro';overflow: hidden;color: #626262;">
 			<b>Jesús Cortés Hernández</b><br>
 			<small><b>Responsable</b></small>
 			<div style="width: 100%;height: 11px;"></div>
@@ -49,7 +25,7 @@
 			<small>Tel. +52(81)8329 4040, directo 83294078, Fax 83294083</small>
 			<small>Cd. Universitaria C.P. 66450, San Nicolás  de los Garza, N.L</small>
 		</div>
-		<img style="margin-top: 14px;margin-left:45px ;float: left;" src="imagenes/logo_optimiza.gif" alt="logo optimiza">
+		<img style="margin-top: 14px;margin-left:45px ;float: left;margin-bottom:14px;" src="imagenes/logo_optimiza.gif" alt="logo optimiza">
 		<small style="color: #6da752;float: left;margin-left:23px;margin-top:20px;font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
 	</div>
 </body>
