--- a/firma.html
+++ b/firma.html
@@ -3,15 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Firma Desarrollo</title>
-	<style type="text/css">
-	
-/*	* {
-		box-sizing: border-box;padding: 0;margin:0;
-	}*/
-
-	</style>
 </head>
 <body style="box-sizing: border-box;padding: 0;margin:0;">
+	<h1>versión divs</h1>
 	<div style="width: 480px;overflow: hidden;border: 1px solid black;box-sizing: border-box;padding: 0;margin:0;">
 		<img style="margin-left: 29px;margin-top:62px;float: left;" src="imagenes/logo_uanl.gif" alt="logo Uni" >
 		<div style="width: 277px;float: left;margin-top: 25px;margin-left: 15px;border-left:2px solid black;padding-left: 7px;font-size: 12px;font-family: 'Myriad Pro';overflow: hidden;color: #626262;">
