modify de table way

--- a/firma.html
+++ b/firma.html
@@ -26,27 +26,28 @@
 	
 
 
-	<table style="width: 480px;height:200px;overflow: hidden;box-sizing: border-box;padding: 0;margin:0;">
-		<tr style="height:25px;"></tr>
-		<tr >
-			<td>
+	<table style="width: 480px;height:200px;overflow: hidden;box-sizing: border-box;padding: 0;margin:0; border-collapse: collapse; ">
+		<tr></tr>
+		<tr>
+			<td style="text-align:center;">
 				<img style="margin-left: 29px;margin-top:62px;float: left;" src="imagenes/logo_uanl.gif" alt="logo Uni" >
 			</td>
 			<td style="width: 277px;float: margin-left: 15px;border-left:2px solid black;padding-left: 7px;font-size: 12px;font-family: 'Myriad Pro';overflow: hidden;color: #626262;">
 					<b>Jesús Cortés Hernández</b><br>
 					<small><b>Responsable</b></small>
-					<br><br>
+					<br style="line-height:60000px;">
 					<small >Recurso Humanos y Servicios Generales</small><br>
 					<small>Coordinación Administrativa</small><br>
 					<small>Dirección General de Informática</small>
-					<br><br>
+					<br>
 					<small>Tel. +52(81)8329 4040, directo 83294078, Fax 83294083</small>
 					<small>Cd. Universitaria C.P. 66450, San Nicolás  de los Garza, N.L</small>
 			</td>
 		</tr>
+		<!-- <tr style="height:25px;"></tr> -->
 		<tr>
-			<td>
-				<img style="margin-top: 14px;margin-left:45px ;float: left;margin-bottom:14px;" src="imagenes/logo_optimiza.gif" alt="logo optimiza">
+			<td style="text-align:center;">
+				<img style="margin-top: -15px;margin-right:35px ;float:right;margin-bottom:14px;" src="imagenes/logo_optimiza.gif" alt="logo optimiza">
 			</td>
 			<td>
 				<small style="color: #6da752;float: left;margin-left:23px;margin-top:20px;font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
