--- a/firma.html
+++ b/firma.html
@@ -22,11 +22,9 @@
 		<img style="margin-top: 14px;margin-left:45px ;float: left;margin-bottom:14px;" src="imagenes/logo_optimiza.gif" alt="logo optimiza">
 		<small style="color: #6da752;float: left;margin-left:23px;margin-top:20px;font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
 	</div>
-	<br><br><br><br><br><br><br><br><br><br>
+	<br><br><br>
 	
-
-
-	<table style="width: 480px;height:200px;overflow: hidden;box-sizing: border-box;padding: 0;margin:0; border-collapse: collapse; ">
+	<!-- <table style="width: 480px;height:200px;overflow: hidden;box-sizing: border-box;padding: 0;margin:0; border-collapse: collapse; ">
 		<tr></tr>
 		<tr>
 			<td style="text-align:center;">
@@ -35,7 +33,7 @@
 			<td style="width: 277px;float: margin-left: 15px;border-left:2px solid black;padding-left: 7px;font-size: 12px;font-family: 'Myriad Pro';overflow: hidden;color: #626262;">
 					<b>Jesús Cortés Hernández</b><br>
 					<small><b>Responsable</b></small>
-					<br style="line-height:60000px;">
+					<br style="line-height:22px;">
 					<small >Recurso Humanos y Servicios Generales</small><br>
 					<small>Coordinación Administrativa</small><br>
 					<small>Dirección General de Informática</small>
@@ -44,7 +42,6 @@
 					<small>Cd. Universitaria C.P. 66450, San Nicolás  de los Garza, N.L</small>
 			</td>
 		</tr>
-		<!-- <tr style="height:25px;"></tr> -->
 		<tr>
 			<td style="text-align:center;">
 				<img style="margin-top: -15px;margin-right:35px ;float:right;margin-bottom:14px;" src="imagenes/logo_optimiza.gif" alt="logo optimiza">
@@ -54,5 +51,47 @@
 			</td>
 		</tr>
 	</table>
+	<br><br><br><br><br><br><br><br> -->
+	
+	<table style="width: 480px;height:200px; overflow: hidden; box-sizing: border-box; padding: 0;margin:0; border-collapse: collapse;">
+		 <col style="width:37.5%">
+			<tr>
+				<td style="height:74.5%;padding-left:29px;padding-top:35px;">
+					<img src="imagenes/logo_uanl.gif" alt="logo Uni" >
+				</td>
+				<td >
+					<table  style="width:277px; border-left: 2px solid black; border-collapse:collapse; ">
+						<tr>
+							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262; padding-left:8px;padding-bottom:6px;">
+								<b>Jesús Cortés Hernández</b><br>
+								<small><b>Responsable</b></small>
+							</td>
+						</tr>
+						<tr>
+							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262; padding-left:8px;padding-bottom:6px;">
+								<small >Recurso Humanos y Servicios Generales</small><br>
+								<small>Coordinación Administrativa</small><br>
+								<small>Dirección General de Informática</small>
+							</td>
+						</tr>
+						<tr>
+							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262;padding-left:8px;">
+								<small>Tel. +52(81)8329 4040, directo 83294078, Fax 83294083</small>
+								<small>Cd. Universitaria C.P. 66450, San Nicolás  de los Garza, N.L</small>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
+				<td style="padding-left:40px;padding-bottom:5px;">
+					<img  src="imagenes/logo_optimiza.gif" alt="logo optimiza">
+				</td>
+				<td >
+					<small style="color: #6da752;float: left;margin-left:23px;margin-top:20px;font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
+				</td>
+			</tr>
+	</table>
+<br><br><br><br><br><br><br><br>
 </body>
 </html>
