--- a/firma.html
+++ b/firma.html
@@ -4,94 +4,44 @@
 	<meta charset="UTF-8">
 	<title>Firma Desarrollo</title>
 </head>
-<body style="box-sizing: border-box;padding: 0;margin:0;">
-	<h1>versión divs</h1>
-	<div style="width: 480px;overflow: hidden;border: 1px solid black;box-sizing: border-box;padding: 0;margin:0;">
-		<img style="margin-left: 29px;margin-top:62px;float: left;" src="imagenes/logo_uanl.gif" alt="logo Uni" >
-		<div style="width: 277px;float: left;margin-top: 25px;margin-left: 15px;border-left:2px solid black;padding-left: 7px;font-size: 12px;font-family: 'Myriad Pro';overflow: hidden;color: #626262;">
-			<b>Jesús Cortés Hernández</b><br>
-			<small><b>Responsable</b></small>
-			<div style="width: 100%;height: 11px;"></div>
-			<small >Recurso Humanos y Servicios Generales</small><br>
-			<small>Coordinación Administrativa</small><br>
-			<small>Dirección General de Informática</small>
-			<div style="width: 100%;height: 11px;"></div>
-			<small>Tel. +52(81)8329 4040, directo 83294078, Fax 83294083</small>
-			<small>Cd. Universitaria C.P. 66450, San Nicolás  de los Garza, N.L</small>
-		</div>
-		<img style="margin-top: 14px;margin-left:45px ;float: left;margin-bottom:14px;" src="imagenes/logo_optimiza.gif" alt="logo optimiza">
-		<small style="color: #6da752;float: left;margin-left:23px;margin-top:20px;font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
-	</div>
-	<br><br><br>
-	
-	<!-- <table style="width: 480px;height:200px;overflow: hidden;box-sizing: border-box;padding: 0;margin:0; border-collapse: collapse; ">
-		<tr></tr>
-		<tr>
-			<td style="text-align:center;">
-				<img style="margin-left: 29px;margin-top:62px;float: left;" src="imagenes/logo_uanl.gif" alt="logo Uni" >
-			</td>
-			<td style="width: 277px;float: margin-left: 15px;border-left:2px solid black;padding-left: 7px;font-size: 12px;font-family: 'Myriad Pro';overflow: hidden;color: #626262;">
-					<b>Jesús Cortés Hernández</b><br>
-					<small><b>Responsable</b></small>
-					<br style="line-height:22px;">
-					<small >Recurso Humanos y Servicios Generales</small><br>
-					<small>Coordinación Administrativa</small><br>
-					<small>Dirección General de Informática</small>
-					<br>
-					<small>Tel. +52(81)8329 4040, directo 83294078, Fax 83294083</small>
-					<small>Cd. Universitaria C.P. 66450, San Nicolás  de los Garza, N.L</small>
-			</td>
-		</tr>
-		<tr>
-			<td style="text-align:center;">
-				<img style="margin-top: -15px;margin-right:35px ;float:right;margin-bottom:14px;" src="imagenes/logo_optimiza.gif" alt="logo optimiza">
-			</td>
-			<td>
-				<small style="color: #6da752;float: left;margin-left:23px;margin-top:20px;font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
-			</td>
-		</tr>
-	</table>
-	<br><br><br><br><br><br><br><br> -->
-	
-	<table style="width: 480px;height:200px; overflow: hidden; box-sizing: border-box; padding: 0;margin:0; border-collapse: collapse;">
+<body style="box-sizing: border-box;padding:0;margin-left:50;">	
+	<table style="width: 480px;height:200px; overflow: hidden; box-sizing: border-box;border-collapse: collapse;">
 		 <col style="width:37.5%">
 			<tr>
-				<td style="height:74.5%;padding-left:29px;padding-top:35px;">
+				<td style="/*border:1px solid black;*/height:74.5%;padding-left:29px;padding-top:35px;">
 					<img src="imagenes/logo_uanl.gif" alt="logo Uni" >
 				</td>
-				<td >
-					<table  style="width:277px; border-left: 2px solid black; border-collapse:collapse; ">
+				<td style="/*border:1px solid red;*/">
+					<table  style="width:277px; border-left: 2px solid #626262; border-collapse:collapse; ">
 						<tr>
-							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262; padding-left:8px;padding-bottom:6px;">
-								<b>Jesús Cortés Hernández</b><br>
-								<small><b>Responsable</b></small>
+							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262; padding-left:11px;padding-bottom:9px;">
+								<b>Ing. Alberto Zambrano Elizondo</b><p style="height:-1px; margin:0; padding:0;"></p>
+								<small><b>Director</b></small>
 							</td>
 						</tr>
 						<tr>
-							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262; padding-left:8px;padding-bottom:6px;">
-								<small >Recurso Humanos y Servicios Generales</small><br>
-								<small>Coordinación Administrativa</small><br>
-								<small>Dirección General de Informática</small>
+							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262; padding-left:11px;padding-bottom:13px;">
+								<small>Dirección de Tecnologías de Información</small>
 							</td>
 						</tr>
 						<tr>
-							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262;padding-left:8px;">
-								<small>Tel. +52(81)8329 4040, directo 83294078, Fax 83294083</small>
-								<small>Cd. Universitaria C.P. 66450, San Nicolás  de los Garza, N.L</small>
+							<td style="font-size: 12px;font-family: 'Myriad Pro';color: #626262;padding-left:11px;">
+								<small>Tel. +52(81)8329 4040</small><br>
+								<small>Cd. Universitaria, C.P. 66455, San Nicolás  de los Garza</small><br>
+								<small>Nuevo León, México</small>
 							</td>
 						</tr>
 					</table>
 				</td>
 			</tr>
 			<tr>
-				<td style="padding-left:40px;padding-bottom:5px;">
+				<td style="/*border:1px solid blue;*/ padding-left:40px;padding-bottom:5px;padding-top:5px;">
 					<img  src="imagenes/logo_optimiza.gif" alt="logo optimiza">
 				</td>
-				<td >
-					<small style="color: #6da752;float: left;margin-left:23px;margin-top:20px;font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
+				<td style="/*border:1px solid orange;*/ padding-left:15px; padding-top:0;">
+					<small style="color: #6da752;  font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
 				</td>
 			</tr>
 	</table>
-<br><br><br><br><br><br><br><br>
 </body>
 </html>
