--- a/firma.html
+++ b/firma.html
@@ -9,7 +9,7 @@
 		 <col style="width:37.5%">
 			<tr>
 				<td style="/*border:1px solid black;*/height:74.5%;padding-left:29px;padding-top:35px;">
-					<img src="imagenes/logo_uanl.gif" alt="logo Uni" >
+					<img src="http://eventos.uanl.mx/dti_firmas/imagenes/logo_uanl.gif" alt="logo Uni" >
 				</td>
 				<td style="/*border:1px solid red;*/">
 					<table  style="width:277px; border-left: 2px solid #626262; border-collapse:collapse; ">
@@ -36,7 +36,7 @@
 			</tr>
 			<tr>
 				<td style="/*border:1px solid blue;*/ padding-left:40px;padding-bottom:5px;padding-top:5px;">
-					<img  src="imagenes/logo_optimiza.gif" alt="logo optimiza">
+					<img  src="http://eventos.uanl.mx/dti_firmas/imagenes/logo_optimiza.gif" alt="logo optimiza">
 				</td>
 				<td style="/*border:1px solid orange;*/ padding-left:15px; padding-top:0;">
 					<small style="color: #6da752;  font-size: 12px;font-family: 'Myriad Pro';">Imprime sólo  lo que  necesites.</small>
